syntax = "proto3";

package milvus.proto.index;

option go_package = "github.com/milvus-io/milvus/internal/proto/indexpb";

import "common.proto";
import "internal.proto";
import "milvus.proto";

service IndexCoord {
  rpc GetComponentStates(internal.GetComponentStatesRequest) returns (internal.ComponentStates) {}
  rpc GetTimeTickChannel(internal.GetTimeTickChannelRequest) returns(milvus.StringResponse) {}
  rpc GetStatisticsChannel(internal.GetStatisticsChannelRequest) returns(milvus.StringResponse){}
  rpc BuildIndex(BuildIndexRequest) returns (common.Status){}
  rpc GetIndexStates(GetIndexStatesRequest) returns (GetIndexStatesResponse) {}
  rpc GetIndexFilePaths(GetIndexFilePathsRequest) returns (GetIndexFilePathsResponse){}
  rpc DropIndex(DropIndexRequest) returns (common.Status) {}
  rpc RemoveIndex(RemoveIndexRequest) returns (common.Status) {}

  // https://wiki.lfaidata.foundation/display/MIL/MEP+8+--+Add+metrics+for+proxy
  rpc GetMetrics(milvus.GetMetricsRequest) returns (milvus.GetMetricsResponse) {}
}

service IndexNode {
  rpc GetComponentStates(internal.GetComponentStatesRequest) returns (internal.ComponentStates) {}
  rpc GetTimeTickChannel(internal.GetTimeTickChannelRequest) returns(milvus.StringResponse) {}
  rpc GetStatisticsChannel(internal.GetStatisticsChannelRequest) returns(milvus.StringResponse){}
  rpc CreateIndex(CreateIndexRequest) returns (common.Status){}
  rpc GetTaskSlots(GetTaskSlotsRequest) returns (GetTaskSlotsResponse){}

  // https://wiki.lfaidata.foundation/display/MIL/MEP+8+--+Add+metrics+for+proxy
  rpc GetMetrics(milvus.GetMetricsRequest) returns (milvus.GetMetricsResponse) {}
}

message FieldIndex {
  int64 collectionID = 1;
  int64 partitionID = 2;
  int64 fieldID = 3;
  int64 indexID = 4;
  string index_name = 5;
  repeated common.KeyValuePair type_params = 6;
  repeated common.KeyValuePair index_params = 7;
}

message SegmentIndex {
    int64 collectionID = 1;
//    int64 partitionID = 2;
    int64 segmentID = 3;
    int64 num_rows = 4;
    int64 indexID = 5;
    int64 buildID = 6;
    int64 nodeID = 7;
    common.IndexState state = 8;
    int64 index_version = 9;
    string index_files_paths = 10;
    bool deleted = 11;
    uint64 create_time = 12;
    uint64 serialize_size = 13;
}

message RegisterNodeRequest {
  common.MsgBase base = 1;
  common.Address address = 2;
  int64 nodeID = 3;
}

message RegisterNodeResponse {
  common.Status status = 1;
  internal.InitParams init_params = 2;
}

message GetIndexStatesRequest {
  repeated int64 indexBuildIDs = 1;
}

message GetIndexStatesResponse {
  common.Status status = 1;
  common.IndexState state = 2;
}

message CreateIndexRequest {
  int64 indexBuildID = 1;
  string index_name = 2;
  int64 indexID = 3;
  int64 version = 4;
  string meta_path = 5;
  repeated string data_paths = 6;
  repeated common.KeyValuePair type_params = 7;
  repeated common.KeyValuePair index_params = 8;
}

message BuildIndexRequest {
  int64 collectionID = 1;
  int64 fieldID = 2;
  string index_name = 3;
  repeated common.KeyValuePair type_params = 4;
  repeated common.KeyValuePair index_params = 5;
}

message GetIndexFilePathsRequest {
  repeated int64 segmentIDs = 1;
  string index_name = 2;
}

message IndexFilePathInfo {
  common.Status status = 1;
  int64 indexBuildID = 2;
  repeated string index_file_paths = 3;
  uint64 serialized_size = 4;
}

message GetIndexFilePathsResponse {
  common.Status status = 1;
  repeated IndexFilePathInfo file_paths = 2;
}

message DropIndexRequest {
  int64 collectionID = 1;
  int64 fieldID = 2;
  string index_name = 3;
}

message RemoveIndexRequest {
  repeated int64 buildIDs = 1;
}

message GetTaskSlotsRequest {

}

message GetTaskSlotsResponse {
  common.Status status = 1;
  int64 slots = 2;
}
